[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "relay-proxy"
version = "0.1.0"
description = "relay HTTP caching proxy CLI"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "mqverk" }
]

[project.scripts]
relay = "relay.cli:main"

[tool.setuptools]
packages = ["relay"]
